[package]
name = "space_invaders_emulator"
version = "0.1.0"
authors = ["shocoman <shoco13@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies.sdl2]
version = "0.34.1"
default-features = false
features = ["mixer"]
